ya funcionan la tabla productos

--- a/templates/administrador/modificar_proveedor.html
+++ b/templates/administrador/modificar_proveedor.html
@@ -19,6 +19,7 @@
       <textarea id="direccion" name="direccion">{{ proveedor.direccion }}</textarea>
       <br>
       <button type="submit">Guardar Cambios</button>
+      <a href="/admin/proveedores" class="btn-secondary">Cancelar</a>
     </form>
   </body>
 {% endblock %}
