--- a/templates/administrador/productos.html
+++ b/templates/administrador/productos.html
@@ -3,6 +3,62 @@
 {% block title %}Productos - Administrador{% endblock %}
 
 {% block content %}
-<h1>Bienvenido, {{ nombre }}!</h1>
-<p>Esta es la página para los productos.</p>
+
+<body>
+    <!-- Main Content -->
+        <div class="main-content">
+          <h1>Lista de Productos</h1>
+          
+          <!-- Botones de acción -->
+          <div class="action-buttons">
+            <button onclick="window.location.href='/admin/agregar_producto'">Agregar Producto</button>
+          </div>
+    
+          <!-- Tabla de proveedores -->
+          <table class="table-proveedores">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Cantidad</th>
+                <th>ID Categoria</th>
+                <th>ID Proveedor</th>
+                <th>Ubicacion</th>
+                <th>Acciones</th> <!-- Nueva columna para acciones -->
+              </tr>
+            </thead>
+            <tbody>
+              {% if productos %}
+                {% for producto in productos %}
+                <tr>
+                  <td>{{ producto.id_producto }}</td>
+                  <td>{{ producto.nombre }}</td>
+                  <td>{{ producto.descripcion }}</td>
+                  <td>{{ producto.cantidad }}</td>
+                  <td>{{ producto.categoria_id }}</td>
+                  <td>{{ producto.proveedor_id }}</td>
+                  <td>{{ producto.ubicacion}}</td>
+                  <td>
+                    <!-- Botón para modificar -->
+                    <form class="modify" action="/admin/modificar_producto/{{ producto.id_producto }}" method="GET" style="display:inline;">
+                      <button type="submit">Modificar</button>
+                    </form>
+                    <!-- Botón para eliminar -->
+                    <form class="delete" action="/admin/eliminar_producto/{{ producto.id_producto }}" method="POST" style="display:inline;">
+                      <button type="submit" onclick="return confirm('¿Estás seguro de eliminar este producto?')">Eliminar</button>
+                    </form>
+                  </td>
+                </tr>
+                {% endfor %}
+              {% else %}
+                <tr>
+                  <td colspan="6">No hay productos registrados</td>
+                </tr>
+              {% endif %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </body>
 {% endblock %}
