--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -245,3 +245,27 @@ footer {
 .form_mod button:hover {
     background-color: #16A085;
 }
+
+form.form-proveedor input,
+form.form-proveedor select {
+  margin-top: 5px;
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+form.form-proveedor label {
+    margin-top: 10px;
+    font-size: 16px;
+  }
+
+form.form-proveedor button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-top: 15px;
+    transition: background-color 0.3s;
+  }
