--- a/templates/_header.html
+++ b/templates/_header.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Estilo CSS-->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styleUsuarios.css') }}">
 <!-- Favicon -->
 <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
 <!-- Font awesome-->
