--- a/static/css/styleUsuarios.css
+++ b/static/css/styleUsuarios.css
@@ -1,4 +1,14 @@
-#table{
+.contenedor{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.titulo{
+    font-weight: bold;
+    font-size: 25px;
+}
+
+#tabla{
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
@@ -14,3 +24,34 @@
     background-color: #88a3bf;
     color: white;
 }
+
+/* Boton Agregar para todos los formularios*/
+.agregar{
+    margin-right: 10px;
+    padding: 10px 15px;
+    background-color: #1ABC9C;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+/* Para todos los botones */
+button{
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+button:hover{
+    background-color: #0056b3;
+}
+/*--------------------------------*/
+/* Modal Agregar-Editar */
