--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -95,6 +95,13 @@ ul li a i {
     line-height: 1.5;
 }
 
+.logout-btn {
+    margin: 5px;
+    background-color: #dc3545;
+    color: white;
+    border-radius: 5px;
+}
+/*---------------------------------------*/
 /*CSS Contenido*/
 .content {
     background-color: rgba(255,255,255, 0.8);
@@ -144,6 +151,7 @@ footer {
 .action-buttons button:hover {
     background-color: #317ecb;
 }
+
 
 
 
