--- a/templates/_header.html
+++ b/templates/_header.html
@@ -9,3 +9,4 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <!-- Scripts -->
 <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/scriptUsuarios.js') }}" defer></script>
