antes de bajar los cambios de Fredy

--- a/templates/administrador/categorias.html
+++ b/templates/administrador/categorias.html
@@ -3,6 +3,10 @@
 {% block title %}Categorias - Administrador{% endblock %}
 
 {% block content %}
-<h1>Bienvenido, {{ nombre }}!</h1>
-<p>Esta es la página para las categorias.</p>
+<div class="contenedor">
+    <div class="titulo">
+        <h2>Categorias</h2>
+    </div>
+    
+</div>
 {% endblock %}
