--- a/templates/administrador/usuarios.html
+++ b/templates/administrador/usuarios.html
@@ -9,7 +9,7 @@
     </div>
     <div class="contendio">
         <div>
-            <button class="agregar" id="agregar-usuario" onclick="guardarUsuario()">Agregar usuario</button>
+            <button class="agregar" id="agregar-usuario" onclick="agregarUsuario()">Agregar usuario</button>
         </div>
         <div>
             <table class="tabla-usuarios" id="tabla">
