--- a/templates/administrador/agregar_productos.html
+++ b/templates/administrador/agregar_productos.html
@@ -18,7 +18,7 @@
       <input type="text" id="descripcion" name="descripcion" required>
 
       <label for="cantidad">Cantidad:</label>
-      <input type="number" id="cantidad" name="cantidad" required>
+      <input type="number" id="cantidad" name="cantidad" required name="points" min="1" step="1">
 
       <label for="categoria_id">Categoría:</label>
       <select id="categoria_id" name="categoria_id" required>
