--- a/templates/administrador/modificar_productos.html
+++ b/templates/administrador/modificar_productos.html
@@ -13,7 +13,7 @@
         <input type="text" id="descripcion" name="descripcion" value="{{ producto.descripcion }}" required>
         <br>
         <label for="cantidad">Cantidad:</label>
-        <input type="number" id="cantidad" name="cantidad" value="{{ producto.cantidad }}" required>
+        <input type="number" id="cantidad" name="cantidad" value="{{ producto.cantidad }}" required name="points" min="1" step="1">
         <br>
         <label for="categoria_id">Categoría:</label>
         <select id="categoria_id" name="categoria_id" required>
