Todo el CRUD de categorias esta funcionando, falta movimientos

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor">
         <div class="titulo">
             <h1>Refaccionaria</h1>
-            <h1>"Los Mofles"</h1>
+            <h1>"All Solutions"</h1>
             <h2>Inicio de Sesión</h2>
         </div>
         <div class="formLogin">
